...
        <!--<item-->
        <!--android:id="@+id/navDriveWithRideAustin"-->
        <!--android:icon="@drawable/nav_car"-->
        <!--android:title="@string/drive_with_ride_austin" />-->

        <item
            android:id="@+id/navRide"
            android:icon="@drawable/nav_ride_type"
            android:title="@string/ride_request" />
        <item
            android:id="@+id/navEarning"
            android:icon="@drawable/nav_earnings"
            android:title="@string/earnings" />
        <item
            android:id="@+id/navDirectConnect"
            android:icon="@drawable/nav_direct_connect"
            android:title="@string/direct_connect_menu"
            android:visible="true" />
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navRefer"
            android:icon="@drawable/nav_refer"
            android:title="@string/refer_friend_title"/>
...
