...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/usersPhoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:padding="10dp"
                        android:scaleType="fitXY"
...
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rate_driver_divider_height"
                    android:background="@android:color/darker_gray"
                    android:visibility="@{settingsFragmentViewModel.showStats}"/>

                <TextView
                    android:id="@+id/textViewMyCars"
                    style="@style/RATextView.MontserratRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/my_cars"
...
