...
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string> <!-- button indicates current state, not action -->
    <string name="action_go_offline">ONLINE</string> <!-- button indicates current state, not action -->
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>

    <string name="car_type_save_warning">Please select at least one car category</string>
    <string name="ride_request_change_error">You cannot change ride type during trip.</string>
    <string name="ride_request_please_select">Please select car type</string>
    <string name="ride_request_description">Your current ride request type is now set to the following categories. You are set to receive:\n\n</string>
    <string name="ride_request_female_only">\nfemale driver requests ONLY</string>
    <string name="ride_request_dc_only">\ndirect connect requests ONLY</string>
    <string name="ride_request_and">\nand\n</string>
...
